force-app/main/default/objects/RecordLabel__c/RecordLabel__c.object-meta.xml
<CustomObject>
    <label>RecordLabel</label>
    <nameField>
        <label>RecordLabel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RecordLabels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>