force-app/main/default/objects/RecordLabel__c/fields/CategoryNumber__c.field-meta.xml
<CustomField>
    <fullName>CategoryNumber__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>CategoryNumber</label>
    <type>AutoNumber</type>
</CustomField>