force-app/main/default/objects/RecordLabel__c/fields/LabelName__c.field-meta.xml
<CustomField>
    <fullName>LabelName__c</fullName>
    <description>Enter Label Name</description>
    <label>LabelName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>